# FrankaControlProxy

./: CMakeLists.txt  FrankaControlParams.cfg  RobotConfig.yaml  config.cfg  test.bash
include/: RobotConfig.h  RobotServer.h  RobotState.h
src/: follow.cpp  human_controller.cpp  main copy.cpp  main.cpp
test/: request.py  subscriber.py
